# pdf2md

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/models/: schemas.py
app/services/: cache.py  converter.py
app/storage/: local.py
static/: index.html  viewer.html
static/css/: style.css
static/js/: upload.js  viewer.js
