[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF to Markdown/HTML converter web app using Docling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "docling>=2.15.0",
    "aiosqlite>=0.20.0",
    "pillow>=10.0.0",
    "pypdf>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
